--- a/views/superleague-table.pug
+++ b/views/superleague-table.pug
@@ -3,9 +3,9 @@ include template/superleague-nav.pug
 
 .contain
 	.wrap
-		.nav-bar-tertiary
-			a(href="/superleague/standings" class=(nav.tertiary === 'league' ? 'active' : '')) League
-			a(href="/superleague/standings/playoffs" class=(nav.tertiary === 'playoffs' ? 'active' : '')) Playoffs
+		// .nav-bar-tertiary
+		// 	a(href="/superleague/standings" class=(nav.tertiary === 'league' ? 'active' : '')) League
+		// 	a(href="/superleague/standings/playoffs" class=(nav.tertiary === 'playoffs' ? 'active' : '')) Playoffs
 
 		.table
 			.row.head
