--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -174,17 +174,9 @@
 				flex 0 0 100px
 
 		&.entry
-			// &[data-position='1']
-			// &[data-position='2']
-			// &[data-position='3']
-			// &[data-position='4']
-			// &[data-position='5']
-			// &[data-position='6']
-			// 	box-shadow -2px 0 0 0 #2acb4f
-
-			&[data-position='7']
-			&[data-position='8']
-				box-shadow -2px 0 0 0 #ec041f
+			// &[data-position='7']
+			// &[data-position='8']
+			// 	box-shadow -2px 0 0 0 #ec041f
 
 			&:hover
 				background rgba(black,.4)
@@ -525,126 +517,31 @@
 			&:not(:last-child)
 				border-bottom 1px solid #131417
 
-			.map
-				color white
-				height 100%
-				font-size .8rem
-				padding-left 1rem
-				flex 0 0 15%
+	.map
+		color white
+		height 100%
+		font-size .8rem
+		padding-left 1rem
+		flex 0 0 15%
 
-				a
-					text-decoration none
-					color: #8b8b8b
-					box-shadow: 0 2px 0 #ffffff14
+		a
+			text-decoration none
+			color: #8b8b8b
+			box-shadow: 0 2px 0 #ffffff14
 
-					&:hover
-						box-shadow none
+			&:hover
+				box-shadow none
 
-			.game
-				display flex
-				flex 0 0 calc( (100% - 15%) / 4)
-				justify-content center
-				align-items center
-				padding .5rem 0
-				text-decoration none
+	.game
+		display flex
+		flex 0 0 calc( (100% - 15%) / 4)
+		justify-content center
+		align-items center
+		padding .5rem 0
+		text-decoration none
 
-				&:hover
-					background rgba(black, .4)
-
-	.round
-		margin-bottom 2rem
-		background #0b0c0e
-		border-radius 6px 6px 0 0
-		position relative
-
-		h3
-			text-align center
-			font-size .8rem
-			font-weight 600
-			text-transform uppercase
-			padding .6rem 0
-			color #747474
-			background linear-gradient(to top right,#000000,#0b0c0e)
-			border-radius 6px 6px 0 0
-
-		h4
-			text-align center
-			font-size .8rem
-			font-weight 600
-			text-transform uppercase
-			padding .6rem 0
-			color #747474
-			background linear-gradient(to top right,#000000,#0b0c0e)
-			// background #030404
-			border-radius 6px 6px 0 0
-
-
-		.match
-			display inline-block
-			width 36%
-			vertical-align top
-
-		&[data-games="2"]
-			.match:last-child
-				float right
-
-		&[data-games="1"]
-			.match
-				margin 0 auto
-				width 33.33%
-				display block
-				padding 0
-
-				.game
-					width 70%
-
-				.map
-					width 30%
-
-		.games
-			&:not(:last-child)
-				border-bottom 1px solid #131417
-
-			.map
-				color white
-				height 100%
-				width 100%
-				font-size .8rem
-				display flex
-				justify-content left
-				align-items center
-				padding .2rem 0 .2rem 0
-				padding-left 1rem
-				display inline-flex
-				width 50%
-
-				a
-					text-decoration none
-					color: #8b8b8b
-					box-shadow: 0 2px 0 #ffffff14
-
-					&:hover
-						box-shadow none
-
-
-			.game
-				display flex
-				justify-content center
-				align-items center
-				padding .5rem 0
-				text-decoration none
-				margin 0 auto
-				display inline-flex
-				width 50%
-
-				&:hover
-					background rgba(black, .4)
-
-
-
-
-
-
+		&:hover
+			background rgba(black, .4)
 
 	.block
 		&.team
@@ -687,6 +584,156 @@
 				display inline-block
 				color rgba(white, .2)
 
+
+
+
+
+	.schedule-playoffs
+
+		.round-group
+			margin-bottom 1rem
+			// margin-bottom .5rem
+
+		.round
+			// margin-bottom 3rem
+
+			.headline
+				border-radius 6px 6px 0 0
+				padding .6rem 0
+				background linear-gradient(to top right,#000000,#0b0c0e)
+				display flex
+
+				.title
+					font-size .8rem
+					font-weight 600
+					text-transform uppercase
+					color #747474
+					flex 0 0 40%
+					padding-left 1rem
+
+					.top
+						color #d7d7d7
+
+				.stats
+					flex 0 0 (60% / 3)
+					font-size .8rem
+					font-weight 600
+					text-transform uppercase
+					color #747474
+					justify-content center
+					align-items center
+
+					&.mvb
+						color #e5c661
+
+						svg
+							width 14px
+							height 14px
+							fill url(#gold.mainGradient)
+							margin 0 auto
+
+// 					&.winning
+// 						background red
+
+
+			.match
+				background #0b0c0e
+				margin 0
+
+				flex 1
+				display flex
+				justify-content: center;
+				align-items: center;
+
+				&:not(:last-child)
+					border-bottom 1px solid #131417
+
+				.game
+					flex 0 0 25%
+
+				.stats
+					flex 0 0 calc(60% / 3)
+					justify-content center
+					align-items center
+
+					font-size .8rem
+					color white
+
+					&.mvb
+						color #b9b9b9
+
+						a
+							color #b9b9b9
+							// color #e5c661
+							display inline-block
+							text-decoration none
+							// color var(--teamcolor)
+							// text-shadow 0 0 10px var(--teamcolor)
+
+
+					&.rate
+						// display inline-block
+						// margin 0 auto
+						// background red
+
+						&.winning
+							// background blue
+							display flex
+							// flex 0 0 calc( 100%  / 3)
+							justify-content center
+							align-items center
+
+							.block
+
+								&.val
+									text-shadow 0 0 10px var(--teamglow)
+									color var(--teamcolor)
+									font-size .8rem
+									font-weight 600
+									width 20%
+
+									&:first-child
+										text-align right
+
+									&:last-child
+										text-align left
+
+								&.bar
+									display inline-block
+									width 60%
+									background #ffffff17
+									height 8px
+									border-radius 2px
+
+									.inner1
+										box-shadow 0 0 10px var(--teamglow)
+										background var(--teamcolor)
+										display inline-block
+										height inherit
+										border-radius inherit
+										vertical-align top
+
+									.inner2
+										box-shadow 0 0 10px var(--teamglow)
+										background var(--teamcolor)
+										display inline-block
+										height inherit
+										border-radius inherit
+										vertical-align top
+										float right
+
+
+
+
+
+			.match:hover
+				.mvb a
+					color #538cff
+					box-shadow inset 0 -2px 0 0 #538cff33
+					font-size .9rem
+
+					&:hover
+						box-shadow none
 
 
 
