--- a/views/template/superleague-nav.pug
+++ b/views/template/superleague-nav.pug
@@ -10,9 +10,9 @@
 		h1 NF Super League
 
 		.nav-bar
-			a(href="/superleague" class=(nav.secondary === 'schedule' ? 'active' : '')) Schedule
+			a(href="/superleague" class=(nav.secondary === 'schedule' ? 'active' : '')) Matches
 			a(href="/superleague/teams" class=(nav.secondary === 'teams' ? 'active' : '')) Teams
-			a(href="/superleague/standings" class=(nav.secondary === 'standings' ? 'active' : '')) Standings
+			a(href="/superleague/standings" class=(nav.secondary === 'standings' ? 'active' : '')) League
 			a(href="/superleague/leaders" class=(nav.secondary === 'leaders' ? 'active' : '')) Leaders
 			a(href="/superleague/records" class=(nav.secondary === 'records' ? 'active' : '')) Records
 			a(href="/superleague/stats" class=(nav.secondary === 'stats' ? 'active' : '')) Stats
