--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -592,11 +592,8 @@
 
 		.round-group
 			margin-bottom 1rem
-			// margin-bottom .5rem
 
 		.round
-			// margin-bottom 3rem
-
 			.headline
 				border-radius 6px 6px 0 0
 				padding .6rem 0
@@ -632,10 +629,6 @@
 							fill url(#gold.mainGradient)
 							margin 0 auto
 
-// 					&.winning
-// 						background red
-
-
 			.match
 				background #0b0c0e
 				margin 0
@@ -656,10 +649,8 @@
 					justify-content center
 					align-items center
 
-					font-size .8rem
-					color white
-
 					&.mvb
+						font-size .8rem
 						color #b9b9b9
 
 						a
@@ -672,14 +663,10 @@
 
 
 					&.rate
-						// display inline-block
-						// margin 0 auto
-						// background red
 
 						&.winning
-							// background blue
+						&.hold
 							display flex
-							// flex 0 0 calc( 100%  / 3)
 							justify-content center
 							align-items center
 
@@ -690,7 +677,7 @@
 									color var(--teamcolor)
 									font-size .8rem
 									font-weight 600
-									width 20%
+									width 30%
 
 									&:first-child
 										text-align right
@@ -700,7 +687,7 @@
 
 								&.bar
 									display inline-block
-									width 60%
+									width 40%
 									background #ffffff17
 									height 8px
 									border-radius 2px
