--- a/views/template/superleague-nav.pug
+++ b/views/template/superleague-nav.pug
@@ -10,9 +10,10 @@
 		h1 NF Super League
 
 		.nav-bar
-			a(href="/superleague" class=(nav.secondary === 'matches' ? 'active' : '')) Matches
+			a(href="/superleague" class=(nav.secondary === 'overview' ? 'active' : '')) Overview
 			a(href="/superleague/teams" class=(nav.secondary === 'teams' ? 'active' : '')) Teams
+			a(href="/superleague/matches" class=(nav.secondary === 'matches' ? 'active' : '')) Matches
 			a(href="/superleague/league" class=(nav.secondary === 'league' ? 'active' : '')) League
+			a(href="/superleague/stats" class=(nav.secondary === 'stats' ? 'active' : '')) Stats
 			a(href="/superleague/leaders" class=(nav.secondary === 'leaders' ? 'active' : '')) Leaders
 			a(href="/superleague/records" class=(nav.secondary === 'records' ? 'active' : '')) Records
-			a(href="/superleague/stats" class=(nav.secondary === 'stats' ? 'active' : '')) Stats
