--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -1,3 +1,153 @@
+.overview
+	.bar
+		display block
+		text-align right
+
+		.block
+			display inline-block
+			margin-left 1rem
+			font-size .8rem
+
+			.k
+				display inline-block
+				border-radius 6px 0 0 6px
+				padding .5rem
+				background linear-gradient(to top right,#000,#0b0c0e)
+				color #8b8b8b
+
+			.v
+				display inline-block
+				border-radius 0 6px 6px 0
+				background rgba(#0b0c0e, .75)
+				color white
+				padding .5rem .8rem
+				font-weight 600
+
+			&.dates
+				em
+					padding 0 .4rem
+					display inline-block
+					font-weight 700
+					font-style normal
+					font-size 1rem
+					line-height .8rem
+					color #8b8b8b
+
+		.best
+			display grid
+			column-gap 1rem
+
+			&.leaders
+				--grid-width calc(25% - (3rem / 4))
+				grid-template-columns var(--grid-width) var(--grid-width) var(--grid-width) var(--grid-width)
+
+			&.records
+				--grid-width calc(33.33% - (3rem / 4))
+				grid-template-columns var(--grid-width) var(--grid-width) var(--grid-width)
+
+			.stat
+				margin-bottom 1rem
+				border-radius 6px 6px 0 0
+				background #0b0c0e
+
+				h3
+					padding .6rem 1rem
+					font-size .9rem
+					font-weight 600
+					color #a8a8a8
+					text-transform uppercase
+					background linear-gradient(to top right,#000000,#0b0c0e)
+					text-align center
+					border-radius inherit
+
+				.row
+					display flex
+					flex-direction row
+					align-items stretch
+
+					&:nth-of-type(even)
+						background #08080a
+
+					.item
+						color white
+						font-size .9rem
+						flex 1
+						display flex
+						align-items center
+						padding .2rem 0
+
+						a
+							text-decoration none
+							color #b9b9b9
+
+						&.rank
+							color rgba(white, .15)
+							background black
+							font-size .7rem
+							flex 0 0 24px
+							justify-content center
+
+						&.team
+							font-size .8rem
+							font-weight 600
+							text-transform uppercase
+							text-align left
+							padding-left .5rem
+							flex 0 0 52px
+							text-shadow 0 0 10px var(--teamglow)
+							color var(--teamcolor)
+							justify-content left
+
+						&.player
+							justify-content left
+
+						&.date
+							justify-content right
+							text-align right
+							padding-right 1rem
+							font-size .8rem
+							flex 0 0 75px
+
+						&.map
+							color #b9b9b9
+							font-size .8rem
+
+						&.versus
+							justify-content right
+							font-size .7rem
+							flex 0 0 40px
+							padding-right .5rem
+
+							font-weight 600
+							text-transform uppercase
+							text-shadow 0 0 10px var(--teamglow)
+							color var(--teamcolor)
+							opacity .65
+
+						&.value
+							justify-content right
+							flex 0 0 75px
+							padding-right .5rem
+
+					&:hover
+						.rank
+							color #a8ff62
+
+						.date
+						.player
+							a
+								color #538cff
+								box-shadow inset 0 -2px 0 0 #538cff33
+
+								&:hover
+									box-shadow none
+
+
+
+
+
+
+
 // playoffs
 .playoffs
 	display flex
