--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -45,6 +45,40 @@
 			border-radius 6px 6px 0 0
 			background #0b0c0e
 
+			&.champions
+				display flex
+				flex-direction column
+
+				.content
+					display flex
+					flex 1
+
+				.winningteam
+					display flex
+					align-items center
+					justify-content center
+					flex .1
+					padding .5rem 0
+					color white
+					border-radius 0 0 6px 6px
+					background linear-gradient(to top right,var(--teamglow),var(--teamcolor))
+
+					.logo
+						img
+							height 2rem
+							width 2rem
+							border-radius 10rem
+							box-shadow 0 0 10px var(--teamglow)
+							background var(--teamcolor)
+
+				h5
+					text-shadow 0 0 10px var(--teamglow)
+					color var(--teamcolor)
+					font-size 1rem
+					font-weight 600
+					text-align center
+
+
 			&.final
 				svg
 					height 3rem
@@ -52,6 +86,8 @@
 					fill url(#gold.mainGradient)
 					position relative
 					top .2rem
+
+
 
 			&.mvb
 			&.champions
