--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -1,7 +1,7 @@
 doctype html
 html
 	head
-		title= title
+		title= config.title
 		meta(charset='utf-8')
 		link(rel='stylesheet', href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap")
 		link(rel='stylesheet', href='/init.css')
@@ -16,16 +16,16 @@ html
 			a(href="/")
 				include ../../public/favicon.svg
 
-			// a(href="#" class=(nav.primary === 'tpm' ? 'active' : ''))
+			// a(href="#" class=(config.nav.cat === 'tpm' ? 'active' : ''))
 			// 	span CTF
 
-			a(href="/superleague" class=(nav.primary === 'superleague' ? 'active' : ''))
+			a(href="/superleague" class=(config.nav.cat === 'superleague' ? 'active' : ''))
 				span NF
 
-			// a(href="#" class=(nav.primary === 'players' ? 'active' : ''))
+			// a(href="#" class=(config.nav.cat === 'players' ? 'active' : ''))
 			// 	span Players
 
-			a(href="/leaderboards" class=(nav.primary === 'leaderboards' ? 'active' : ''))
+			a(href="/leaderboards" class=(config.nav.cat === 'leaderboards' ? 'active' : ''))
 				span Leaderboard
 
 			.right
