--- a/views/template/superleague-nav.pug
+++ b/views/template/superleague-nav.pug
@@ -3,9 +3,9 @@
 		.breadcrumb
 			// a(href="#") Neutral Flag
 			// .crumb ›
-			a(href="#") Season 1
+			// a(href= config.path) Season #{config.season}
 			// .crumb ›
-			// .current= nav.secondary
+			.current Season #{config.season}
 
 		h1 NF Super League
 
