--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -1,7 +1,9 @@
-svg.hide
+svg(height="1px" width="1px")
 	defs
 		clipPath(id="wave", clipPathUnits="objectBoundingBox")
 			path(d="M0,1 L0.056,0.983 C0.111,0.966,0.222,0.933,0.333,0.919 C0.444,0.907,0.556,0.913,0.667,0.924 C0.778,0.933,0.889,0.944,0.944,0.949 L1,0.955 L1,0 L0.944,0 C0.889,0,0.778,0,0.667,0 C0.556,0,0.444,0,0.333,0 C0.222,0,0.111,0,0.056,0 L0,0")
+
+		| <linearGradient id="gold.mainGradient" x1="0" x2="25.4482" y1="0.5" y2="2.14888" gradientUnits="userSpaceOnUse"><stop stop-color="hsl(35,65%,48%)" offset="0"></stop><stop stop-color="hsl(47,73%,65%)" offset="0.5"></stop><stop stop-color="hsl(41,57.99999999999999%,49%)" offset="1"></stop></linearGradient>
 
 //-<script id="__bs_script__">//<![CDATA[
 //-	document.write("<script async src='https://tagpro.dev:8000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
