--- a/views/template/head.pug
+++ b/views/template/head.pug
@@ -16,10 +16,10 @@ html
 			a(href="/")
 				include ../../public/favicon.svg
 
-			// a(href="#" class=(config.nav.cat === 'tpm' ? 'active' : ''))
+			// a(href="/ctf/1" class=(config.nav.cat === 'ctf' ? 'active' : ''))
 			// 	span CTF
 
-			a(href="/superleague" class=(config.nav.cat === 'superleague' ? 'active' : ''))
+			a(href="/nf/1" class=(config.nav.cat === 'nf' ? 'active' : ''))
 				span NF
 
 			// a(href="#" class=(config.nav.cat === 'players' ? 'active' : ''))
