--- a/src/css/superleague.styl
+++ b/src/css/superleague.styl
@@ -34,18 +34,18 @@
 					line-height .8rem
 					color #8b8b8b
 
-	.top10
+	.playoff_results
 		display grid
 		column-gap 1rem
 		--grid-width calc(25% - (2rem / 4))
 		grid-template-columns var(--grid-width) calc(var(--grid-width) * 2) var(--grid-width)
 
-		.stat
+		.pane
 			margin-bottom 1rem
 			border-radius 6px 6px 0 0
 			background #0b0c0e
 
-			.hd
+			.headline
 				padding .8rem 0 .6rem 0
 				font-size .9rem
 				font-weight 600
@@ -54,30 +54,42 @@
 				background linear-gradient(to top right,#000000,#0b0c0e)
 				text-align center
 				border-radius 6px 6px 0 0
-				// box-shadow inset 0 1px 0 1px var(--teamcolor)
-
-
 
 			&.champions
 				display flex
 				flex-direction column
-				// box-shadow 0 0 10px 0 var(--teamglow), inset 0 0 0 1px var(--teamcolor)
-				border-radius 6px
-				border 2px solid var(--teamcolor)
-				box-shadow 0 0 10px var(--teamglow)
+				background none
 
-				&.crowned
-					animation buzz 5s infinite
+				.container
+					border-radius 6px
+					background #0b0c0e
 
+					&.crowned
+						animation buzz 6s infinite
+						box-shadow 0 0 20px rgba(white, .1)
 
-				svg
-					fill url(#gold.mainGradient1)
+					svg
+						fill url(#gold.mainGradient1)
+						width 1.1rem
+						height 1.1rem
+						vertical-align text-bottom
 
-				.content
-					display flex
-					flex 1
+					.text
+						color #e5c661
+						display block
 
-					ul
+					.team
+						text-shadow 0 0 10px var(--teamglow)
+						box-shadow 0 2px 0 #a336af1c
+						color var(--teamcolor)
+						font-size .9rem
+						line-height 2rem
+						font-weight 600
+						text-align center
+						text-transform uppercase
+						display inline
+
+					.players
 						padding .6rem 0 1.4rem 0
 						width 100%
 						display block
@@ -90,12 +102,24 @@
 								background rgba(black, .2)
 
 							.name
-								font-size .8rem
+								font-size .9rem
 								line-height 1.6rem
 								display inline-block
 								width 80%
 								color #dbdbdb
+								padding-left 2.2rem
+
+							.captain
+								display inline-block
+								position absolute
 								padding-left 1rem
+
+								svg
+									height .6rem
+									width .6rem
+									fill var(--teamcolor)
+									// box-shadow 0 0 10px var(--teamglow)
+									vertical-align -2px
 
 							.country
 								display inline-block
@@ -113,160 +137,142 @@
 									top 1px
 
 
-				.winningteam
-					display flex
-					align-items center
-					justify-content center
-					padding .75rem 0
-					background linear-gradient(to top right,var(--teamglow),var(--teamcolor))
-					// background var(--teamcolor)
-					// box-shadow: inset 0 0 30px #000000a1, inset 0 0 5px #07080933;
-					// border-radius 6px
+			&.final
+				flex-direction column
+				justify-content space-between
+				display flex
 
-					padding .5rem
-
-
-
-
-
-					.logo
-						justify-content center
-						border-radius 1rem
-
-						img
-							height 2rem
-							width 2rem
-							border-radius 10rem
-							box-shadow 0 0 10px var(--teamglow)
-							background var(--teamcolor)
-
-				.teamname
-					// background #08080a
-					text-shadow 0 0 10px var(--teamglow)
-					color var(--teamcolor)
-					font-size .9rem
-					font-weight 600
+				.content
 					text-align center
-					// padding .5rem
-					text-transform uppercase
+					height calc(100% - (.9rem + .6rem))
 
-					box-shadow: 0 2px 0 #a336af1c;
-					display: inline;
+				.watchfinal
+					display block
+					background var(--color)
+					background black
+					color white
+					text-align center
+					text-decoration none
+					border-radius 0 0 6px 6px
+					font-size .9rem
+					padding .3rem
 
-
-
-			&.champions
-			&.mvb
-				.hd
-					span
-						color #e5c661
-						display block
-
-					svg
-						width 1.1rem
-						vertical-align text-bottom
+					&:hover
+						opacity .8
 
 
 
 			&.mvb
 				svg
 					fill url(#gold.mainGradient)
+					width 1.1rem
+					height 1.1rem
+					vertical-align text-bottom
 
-			.row
-				display flex
-				flex-direction row
-				align-items stretch
+				.text
+					color #e5c661
+					display block
 
-				&:nth-of-type(even)
-					background #08080a
-
-				.item
-					color white
-					font-size .9rem
-					flex 1
+				.row
 					display flex
-					align-items center
-					padding .2rem 0
+					flex-direction row
+					align-items stretch
 
-					a
-						text-decoration none
-						color #b9b9b9
+					&:nth-of-type(even)
+						background #08080a
 
-					&.rank
-						color rgba(white, .15)
-						background black
-						font-size .7rem
-						flex 0 0 24px
-						justify-content center
+					.item
+						color white
+						font-size .9rem
+						flex 1
+						display flex
+						align-items center
+						padding .2rem 0
 
-					&.team
-						font-size .8rem
-						font-weight 600
-						text-transform uppercase
-						text-align left
-						padding-left .5rem
-						flex 0 0 52px
-						text-shadow 0 0 10px var(--teamglow)
-						color var(--teamcolor)
-						justify-content left
+						a
+							text-decoration none
+							color #b9b9b9
 
-					&.player
-						justify-content left
+						&.rank
+							color rgba(white, .15)
+							background black
+							font-size .7rem
+							flex 0 0 24px
+							justify-content center
 
-					&.value
-						justify-content right
-						flex 0 0 75px
-						padding-right .5rem
+						&.team
+							font-size .8rem
+							font-weight 600
+							text-transform uppercase
+							text-align left
+							padding-left .5rem
+							flex 0 0 52px
+							text-shadow 0 0 10px var(--teamglow)
+							color var(--teamcolor)
+							justify-content left
+
+						&.player
+							justify-content left
+
+						&.value
+							justify-content right
+							flex 0 0 75px
+							padding-right .5rem
 
 
-					&.test
-						justify-content right
-						flex 0 0 110px
-						padding-right .5rem
+						&.test
+							justify-content right
+							flex 0 0 110px
+							padding-right .5rem
+
+							.v
+								font-size .8rem
+								display inline-block
+								text-align center
+								// width 90px
+								width 30px
+
+							.bar
+								display inline-block
+								width 100%
+								background #ffffff17
+								height 8px
+								border-radius 2px
+								display none
+
+								.inner
+									display block
+									height inherit
+									border-radius inherit
+									background #e5c762
+
+					&.top
+						.inner
+							box-shadow 0 0 10px #e5c762
 
 						.v
-							font-size .8rem
-							display inline-block
-							text-align center
-							// width 90px
-							width 30px
+							text-shadow: 0 0 10px #e5c762;
+							color: #e5c762;
 
-						.bar
-							display inline-block
-							width 100%
-							background #ffffff17
-							height 8px
-							border-radius 2px
-							display none
+					&:hover
+						.rank
+							color #a8ff62
 
-							.inner
-								display block
-								height inherit
-								border-radius inherit
-								background #e5c762
+						.date
+						.player
+							a
+								color #538cff
+								box-shadow inset 0 -2px 0 0 #538cff33
 
-				&.top
-					.inner
-						box-shadow 0 0 10px #e5c762
-
-					.v
-						text-shadow: 0 0 10px #e5c762;
-						color: #e5c762;
-
-				&:hover
-					.rank
-						color #a8ff62
-
-					.date
-					.player
-						a
-							color #538cff
-							box-shadow inset 0 -2px 0 0 #538cff33
-
-							&:hover
-								box-shadow none
+								&:hover
+									box-shadow none
 
 
+
+	.upcoming
+		display block
+		height 2rem
+		width 100%
 
 
 
