--- a/views/superleague-overview.pug
+++ b/views/superleague-overview.pug
@@ -25,18 +25,13 @@ include template/superleague-nav.pug
 
 
 
-
-
-
-
-
-			.top10
-
-				.stat.mvb
-					.hd
-						svg(viewBox="0 0 24 24")
-							path(d="M19.8,19.313L4.2,19.313C3.87,19.313 3.6,19.587 3.6,19.922L3.6,21.141C3.6,21.476 3.87,21.75 4.2,21.75L19.8,21.75C20.13,21.75 20.4,21.476 20.4,21.141L20.4,19.922C20.4,19.587 20.13,19.313 19.8,19.313ZM22.2,7.125C21.206,7.125 20.4,7.944 20.4,8.953C20.4,9.224 20.46,9.475 20.565,9.707L17.85,11.36C17.273,11.711 16.526,11.512 16.192,10.918L13.136,5.487C13.538,5.152 13.8,4.649 13.8,4.078C13.8,3.069 12.994,2.25 12,2.25C11.006,2.25 10.2,3.069 10.2,4.078C10.2,4.649 10.463,5.152 10.864,5.487L7.808,10.918C7.474,11.512 6.724,11.711 6.15,11.36L3.439,9.707C3.54,9.479 3.604,9.224 3.604,8.953C3.604,7.944 2.798,7.125 1.804,7.125C0.81,7.125 0,7.944 0,8.953C0,9.962 0.806,10.781 1.8,10.781C1.898,10.781 1.995,10.766 2.089,10.751L4.8,18.094L19.2,18.094L21.911,10.751C22.005,10.766 22.103,10.781 22.2,10.781C23.194,10.781 24,9.962 24,8.953C24,7.944 23.194,7.125 22.2,7.125Z")
-						span MVB
+			.playoff_results
+				// most valuable ball
+				.pane.mvb
+					.headline
+						svg
+							use(xlink:href="#mvb")
+						.text MVB
 
 					- let max = parseInt(mvb[0].value)
 					each n, key in mvb
@@ -60,31 +55,37 @@ include template/superleague-nav.pug
 									.inner(style="width:" + percent + "%")
 
 
-
-
-				.stat.final
-					.hd
-						span Playoff Final
-
-				.stat.champions(
-						style="--teamcolor: #f586ff; --teamglow: #f586ff80"
-					).crowned
-
-					.hd
-						| <svg viewBox="0 0 471.122 471.122"><path d="M462.238 58.139c-10.477-15.693-29.517-24.219-52.253-23.416-18.469.656-39.466 10.809-55.399 20.424v-.121c.013-.402.06-.795.06-1.203 0-18.914-15.332-34.248-34.249-34.248-.531 0-85.001-.207-85.001-.207v.072s-84.137.203-84.668.203c-18.916 0-34.249 15.334-34.249 34.25 0 .404.047.801.061 1.201v.121c-15.934-9.613-36.93-19.768-55.398-20.426-22.746-.809-41.784 7.727-52.259 23.421-13.256 19.861-11.669 48.079 4.717 83.872 24.747 54.043 82.906 94.601 111.726 112.162 14.109 32.771 43.256 57.389 81.561 65.108.676 1.603 1.036 3.166 1.036 4.763v52.604h-23.016c-12.106 0-21.919 7.479-21.919 16.709v2.471h-7.901c-15.234 0-27.583 12.352-27.583 27.584v28.271c67.103 0 141.579-.068 216.113-.068v-28.271c0-15.232-12.348-27.582-27.582-27.582h-7.9v-2.471c0-9.23-9.813-16.709-21.92-16.709h-23.016v-52.607c0-1.598.36-3.158 1.036-4.76 38.304-7.721 67.452-32.338 81.562-65.107 28.819-17.564 86.979-58.121 111.725-112.166 16.386-35.794 17.974-64.013 4.716-83.874zM41.501 129.307c-11.329-24.744-13.848-43.943-7.095-54.061 6.475-9.701 21.261-9.945 25.639-9.789 15.641.559 40.69 15.104 56.421 26.473-.041 40.967-.499 118.145-.472 119.207-26.428-19.136-58.934-47.851-74.493-81.83zm388.12-.071c-15.517 33.889-48.045 62.625-74.491 81.789.026-1.049-.434-78.199-.474-119.164 15.731-11.369 40.78-25.916 56.422-26.471 4.377-.16 19.164.088 25.639 9.787 6.752 10.117 4.232 29.316-7.096 54.059z" data-original="#000000" xmlns="http://www.w3.org/2000/svg"></path></svg>
-						span Champions
-
-
-						.teamname Carrot Bunny Hops
-
+				// playoff final stats?
+				.pane.final
+					.headline
+						.text Playoff Final
 
 					.content
+
+					a(href="https://www.youtube.com/watch?v=hios5eKr0-E").watchfinal Watch Final
+
+
+				// playoff champions
+				.pane.champions(
+					style="--teamcolor: #f586ff; --teamglow: #f586ff80"
+				)
+					.container.crowned
+						.headline
+							svg
+								use(xlink:href="#trophy")
+							.text Champions
+							.team Carrot Bunny Hops
+
 						ul.players
 							li
+								.captain
+									svg
+										use(xlink:href="#captain")
 								.name nevermore
 								.country
 									img(src='https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.5/flags/4x3/us.svg')
 							li
+								.captain
 								.name nevermind
 								.country
 									img(src='https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.5/flags/4x3/de.svg')
@@ -94,17 +95,8 @@ include template/superleague-nav.pug
 									img(src='https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/4.1.5/flags/4x3/gb.svg')
 
 
-					.winningteam
-						.logo
-							img(src="https://i.imgur.com/anu2c4I.png")
-
-
-
-
-
-
-
-
+			.upcoming
+				p wat
 
 
 
