--- a/views/template/foot.pug
+++ b/views/template/foot.pug
@@ -3,8 +3,22 @@ svg(height="1px" width="1px")
 		clipPath(id="wave", clipPathUnits="objectBoundingBox")
 			path(d="M0,1 L0.056,0.983 C0.111,0.966,0.222,0.933,0.333,0.919 C0.444,0.907,0.556,0.913,0.667,0.924 C0.778,0.933,0.889,0.944,0.944,0.949 L1,0.955 L1,0 L0.944,0 C0.889,0,0.778,0,0.667,0 C0.556,0,0.444,0,0.333,0 C0.222,0,0.111,0,0.056,0 L0,0")
 
-		| <linearGradient id="gold.mainGradient" x1="0" x2="25.4482" y1="0.5" y2="2.14888" gradientUnits="userSpaceOnUse"><stop stop-color="hsl(35,65%,48%)" offset="0"></stop><stop stop-color="hsl(47,73%,65%)" offset="0.5"></stop><stop stop-color="hsl(41,57.99999999999999%,49%)" offset="1"></stop></linearGradient>
-		| <linearGradient id="gold.mainGradient1" x1="0" x2="500" y1="0.5" y2="20" gradientUnits="userSpaceOnUse"><stop stop-color="hsl(35,65%,48%)" offset="0"></stop><stop stop-color="hsl(47,73%,65%)" offset="0.5"></stop><stop stop-color="hsl(41,57.99999999999999%,49%)" offset="1"></stop></linearGradient>
+		//- mvb
+		linearGradient(id="gold.mainGradient" x1="0" x2="25.4482" y1="0.5" y2="2.14888" gradientUnits="userSpaceOnUse")
+			stop(stop-color="hsl(35,65%,48%)" offset="0")
+			stop(stop-color="hsl(47,73%,65%)" offset="0.5")
+			stop(stop-color="hsl(41,58%,49%)" offset="1")
+
+		//- trophy
+		linearGradient(id="gold.trophy" x1="0" x2="500" y1="0.5" y2="20" gradientUnits="userSpaceOnUse")
+			stop(stop-color="hsl(35,65%,48%)" offset="0")
+			stop(stop-color="hsl(47,73%,65%)" offset="0.5")
+			stop(stop-color="hsl(41,58%,49%)" offset="1")
+
+		linearGradient(id="silver.trophy" x1="0" x2="500" y1="0.5" y2="20" gradientUnits="userSpaceOnUse")
+			stop(stop-color="hsl(0,0%,73%)" offset="0")
+			stop(stop-color="hsl(0,0%,87%)" offset="0.5")
+			stop(stop-color="hsl(0,0%,65%)" offset="1")
 
 		//- captain
 		svg(viewBox="0 0 512 512")#captain
